# scix

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml
.agents/skills/snapy-multi-block-output/: SKILL.md
.agents/skills/thermodynamics/: SKILL.md
.claude/agents/: docs-researcher.md  explorer.md  implementer.md  reviewer.md  student.md  tester.md  tutorial-designer.md
.claude/skills/repo-router/: SKILL.md
.claude/skills/tutorial-style/: SKILL.md
.codex/agents/: implementer.toml  reviewer.toml  student.toml  tester.toml
.github/workflows/: cd.yml  ci.yml  release.yml
ai/agents/: roles.yaml
ai/policy/: commands.md  rules.md  workspace.md
ai/skills/disort/: SKILL.md
ai/skills/snapy-multi-block-output/: SKILL.md
docs/: AI_FOLDER_GUIDE.md  BEGINNER_START_HERE.md
scripts/: dev-up.sh
src/scix/: __init__.py  __main__.py  __version__.py  bootstrap.py  cheatsheet.py  cli.py  constants.py  dev_setup.py  generator.py  scaffold.py
src/scix/assets/: __init__.py
src/scix/assets/template_root/: .gitignore  README.md  requirements.txt
src/scix/assets/template_root/ai/agents/: roles.yaml
src/scix/assets/template_root/ai/hooks/: session_context.sh
src/scix/assets/template_root/ai/policy/: repos.yaml  rules.md
src/scix/assets/template_root/ai/skills/cross-repo-read/: SKILL.md
src/scix/assets/template_root/ai/skills/disort/: SKILL.md
src/scix/assets/template_root/ai/skills/paddle-examples/: SKILL.md
src/scix/assets/template_root/ai/skills/repo-router/: SKILL.md
src/scix/assets/template_root/ai/skills/snapy-multi-block-output/: SKILL.md
src/scix/assets/template_root/docs/: AI_FOLDER_GUIDE.md  BEGINNER_START_HERE.md
src/scix/assets/template_root/repos/: README.md
src/scix/assets/template_root/workspace/: README.md
tests/: test_scaffold.py
