[build-system]
requires = ["setuptools>=69", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "scix"
dynamic = ["version"]
description = "PyPI-first scaffold for a dual Codex and Claude science workspace."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Zoey Hu" }
]
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pre-commit>=4.2",
  "pytest>=8.0",
]

[project.scripts]
scix = "scix.cli:main"

[project.urls]
Homepage = "https://github.com/zoeyzyhu/scix"
Repository = "https://github.com/zoeyzyhu/scix"
Issues = "https://github.com/zoeyzyhu/scix/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "scix.__version__" }

[tool.setuptools.package-data]
scix = ["assets/**/*", "assets/**/.*", "assets/.ai-root"]

[tool.setuptools.exclude-package-data]
scix = ["assets/**/__pycache__/*", "assets/**/*.pyc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/scix/__version__.py" = ["UP006", "UP035"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "src/scix/__version__.py"
